--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
                             <outputDirectory>${basedir}/target/classes/static</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>src/js/build</directory>
+                                    <directory>src/web/build</directory>
                                 </resource>
                             </resources>
                         </configuration>
